--- a/.npmignore
+++ b/.npmignore
@@ -66,7 +66,9 @@ typings/
 test/
 src/
 jest.config.js
-tsconfig.json
-tslint.json
+/tsconfig.json
+/tslint.json
 .travis.yml
 *.map
+
+!/template/.gitignore
