--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocketact-web-console",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Rocketact Web Console",
   "main": "index.js",
   "keywords": [
@@ -46,39 +46,39 @@
     "@types/react-timeago": "^4.1.0",
     "@types/semver": "^5.5.0",
     "@types/webpack-chain": "^5.0.0",
+    "antd": "^3.11.2",
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "css-loader": "^2.0.1",
     "cssnano": "^4.1.7",
+    "gravatar": "^1.8.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "typescript": "^3.2.2",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "antd": "^3.11.2",
-    "gravatar": "^1.8.0",
-    "mobx": "^5.8.0",
-    "mobx-react": "^5.4.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-timeago": "^4.1.9",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "sass-loader": "^7.1.0",
+    "typescript": "^3.2.2",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "execa": "^1.0.0",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
-    "rocketact-dev-utils": "^1.0.0",
+    "rocketact-dev-utils": "^1.0.7",
     "semver": "^5.6.0"
   },
   "peerDependencies": {
