--- a/package.json
+++ b/package.json
@@ -4,7 +4,88 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "commit": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "devDependencies": {
-    "lerna": "^3.13.0"
+    "lerna": "^3.13.0",
+    "@types/glob": "^7.1.1",
+    "@types/minimist": "^1.2.0",
+    "@types/semver": "^5.5.0",
+    "@types/fs-extra": "^5.0.4",
+    "@types/webpack": "^4.4.17",
+    "@types/webpack-chain": "^5.0.0",
+    "@types/webpack-dev-server": "^3.1.1",
+    "@types/chalk": "^2.2.0",
+    "@types/execa": "^0.9.0",
+    "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.2",
+    "@types/ramda": "^0.25.41",
+    "coveralls": "^3.0.2",
+    "commitizen": "3.0.4",
+    "ts-jest": "^23.10.4",
+    "ts-node": "^7.0.1",
+    "cz-conventional-changelog": "^2.1.0",
+    "husky": "^1.1.3",
+    "jest": "^23.6.0",
+    "lint-staged": "^8.0.4",
+    "prettier": "^1.14.3",
+    "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0",
+    "typescript": "^3.1.6",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.16.0",
+    "@types/gravatar": "^1.4.28",
+    "@types/react": "^16.7.17",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-timeago": "^4.1.0",
+    "antd": "^3.11.2",
+    "autoprefixer": "^9.4.3",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-import": "^1.11.0",
+    "css-loader": "^2.0.1",
+    "cssnano": "^4.1.7",
+    "gravatar": "^1.8.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
+    "react-timeago": "^4.1.9",
+    "rxjs": "^6.3.3",
+    "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   }
 }
