--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest --coverage",
-    "commit": "git-cz"
+    "test": "jest --coverage"
   },
   "keywords": [
     "rocketact"
@@ -25,44 +24,9 @@
     "url": "https://github.com/jdf2e/rocketact-scripts/issues"
   },
   "homepage": "https://github.com/jdf2e/rocketact-scripts#readme",
-  "devDependencies": {
-    "@types/glob": "^7.1.1",
-    "@types/jest": "^23.3.9",
-    "@types/minimist": "^1.2.0",
-    "@types/node": "^10.12.2",
-    "@types/semver": "^5.5.0",
-    "@types/webpack": "^4.4.17",
-    "@types/webpack-chain": "^5.0.0",
-    "@types/webpack-dev-server": "^3.1.1",
-    "commitizen": "3.0.4",
-    "cz-conventional-changelog": "^2.1.0",
-    "husky": "^1.1.3",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.0.4",
-    "prettier": "^1.14.3",
-    "ts-jest": "^23.10.4",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.6"
-  },
   "files": [
     "/dist"
   ],
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
   "dependencies": {
     "@babel/core": "^7.1.6",
     "@types/detect-port": "^1.1.0",
