--- a/packages/rocketact-plugin-bundle-analyzer/package.json
+++ b/packages/rocketact-plugin-bundle-analyzer/package.json
@@ -1,10 +1,9 @@
 {
   "name": "rocketact-plugin-bundle-analyzer",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Rockectact plugin for rocketact-plugin-bundle-analyzer",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "keywords": [
     "rocketact"
   ],
@@ -14,7 +13,7 @@
     "rocketact-scripts": "^1.0.0"
   },
   "dependencies": {
-    "rocketact-dev-utils": "^1.0.7",
+    "rocketact-dev-utils": "^1.0.8",
     "webpack-bundle-analyzer": "^3.0.4"
   }
 }
