--- a/packages/rocketact-plugin-butler/package.json
+++ b/packages/rocketact-plugin-butler/package.json
@@ -1,10 +1,9 @@
 {
   "name": "rocketact-plugin-butler",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Rockectact plugin for legacy butler projects",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jdf2e/rocketact.git"
@@ -22,6 +21,6 @@
     "rocketact-scripts": "^1.0.0"
   },
   "dependencies": {
-    "rocketact-dev-utils": "^1.0.7"
+    "rocketact-dev-utils": "^1.0.8"
   }
 }
