--- a/packages/rocketact-plugin-polyfill/package.json
+++ b/packages/rocketact-plugin-polyfill/package.json
@@ -1,10 +1,9 @@
 {
   "name": "rocketact-plugin-polyfill",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "automaticlly include polyfills for projects created by rocketact",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jdf2e/rocketact.git"
