--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -43,7 +43,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "minimist": "^1.2.0",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
@@ -57,7 +57,9 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-chain": "^5.0.1",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "interpolate-html-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.0"
   },
   "engines": {
     "node": ">=8"
