--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/webpack": "^4.4.17",
     "@types/webpack-chain": "^5.0.0",
     "@types/webpack-dev-server": "^3.1.1",
+    "@types/http-proxy":"^1.16.2",
     "antd": "^3.11.2",
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
@@ -88,6 +89,9 @@
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
+    "react-json-editor-ajrm": "^2.5.9"
   }
 }
