--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -33,7 +33,8 @@
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "rocketact-dev-utils": "^1.0.8",
-    "semver": "^5.6.0"
+    "semver": "^5.6.0",
+    "http-proxy": "^1.17.0"
   },
   "peerDependencies": {
     "rocketact-scripts": "^1.0.0"
