--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 node_modules
 lerna-debug.log
 .DS_Store
+
+docusaurus/website/translated_docs
+docusaurus/website/build/
+docusaurus/website/yarn.lock
+docusaurus/website/node_modules
+docusaurus/website/i18n/*
