--- a/packages/rocketact-web-console/package.json
+++ b/packages/rocketact-web-console/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocketact-web-console",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "Rocketact Web Console",
   "main": "index.js",
   "keywords": [
@@ -32,9 +32,9 @@
     "execa": "^1.0.0",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
-    "rocketact-dev-utils": "^1.0.8",
-    "semver": "^5.6.0",
-    "http-proxy": "^1.17.0"
+    "http-proxy": "^1.17.0",
+    "rocketact-dev-utils": "^1.0.9",
+    "semver": "^5.6.0"
   },
   "peerDependencies": {
     "rocketact-scripts": "^1.0.0"
