--- a/packages/rocketact/template/package.json
+++ b/packages/rocketact/template/package.json
@@ -25,12 +25,12 @@
   "devDependencies": {
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
-    "@types/webpack": "^4.4.22",
-    "@types/webpack-env": "^1.13.6",
     "rocketact-scripts": "^1.0.0",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2",
-    "tslint-config-prettier": "^1.17.0"
+    "tslint-config-prettier": "^1.17.0",
+    "autoprefixer": "^9.3.1",
+    "postcss-flexbugs-fixes": "^4.1.0"
   },
   "dependencies": {
     "react": "^16.7.0",
