--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -57,7 +57,8 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-chain": "^5.0.1",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "pnp-webpack-plugin":"^1.4.1"
   },
   "engines": {
     "node": ">=8"
