--- a/packages/babel-preset-rocketact/package.json
+++ b/packages/babel-preset-rocketact/package.json
@@ -17,7 +17,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@babel/runtime": "^7.2.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.20"
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.20",
+    "babel-plugin-macros": "^2.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
