--- a/packages/babel-preset-rocketact/package.json
+++ b/packages/babel-preset-rocketact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-rocketact",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Babel preset used for rockectact",
   "main": "index.js",
   "keywords": [
@@ -17,8 +17,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@babel/runtime": "^7.2.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.20",
-    "babel-plugin-macros": "^2.5.1"
+    "babel-plugin-macros": "^2.5.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.20"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
