--- a/packages/rocketact/template/package.json
+++ b/packages/rocketact/template/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "rocketact-scripts start",
     "build": "rocketact-scripts build",
-    "ts-check": "tsc --project tsconfig.json && tslint --config tslint.json --project tsconfig.json"
+    "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "repository": {
     "type": "git",
@@ -25,13 +25,18 @@
   "devDependencies": {
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
-    "rocketact-scripts": "^1.0.0",
-    "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
-    "tslint-config-prettier": "^1.17.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "autoprefixer": "^9.3.1",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "rocketact-scripts": "^1.0.0",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "rocketact-plugin-polyfill": "^0.1.6"
+    "prettier": "^2.1.2",
+    "rocketact-plugin-polyfill": "^0.1.6",
+    "typescript": "^3.9.3"
   },
   "dependencies": {
     "react": "^16.7.0",
