--- a/packages/rocketact/template/package.json
+++ b/packages/rocketact/template/package.json
@@ -32,6 +32,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "rocketact-scripts": "^1.0.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "prettier": "^2.1.2",
