--- a/packages/rocketact-scripts/package.json
+++ b/packages/rocketact-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocketact-scripts",
-  "version": "1.10.0",
+  "version": "1.10.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,16 @@
     "url": "git+https://github.com/jdf2e/rocketact.git"
   },
   "author": "",
+  "contributors": [
+    {
+      "name": "loveky",
+      "email": "ylzcylx@gmail.com"
+    },
+    {
+      "name": "beanlee",
+      "email": "irobot039@gmail.com"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jdf2e/rocketact/issues"
@@ -54,7 +64,7 @@
     "sass-loader": "^7.1.0",
     "semver": "^6.0.0",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^3.0.3",
+    "terser-webpack-plugin": "4.2.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-chain": "^6.0.0",
