--- a/packages/rocketact/package.json
+++ b/packages/rocketact/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rocketact",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Develop React projects with ease",
   "main": "index.js",
   "scripts": {
@@ -42,7 +42,10 @@
     "caporal": "^1.1.0",
     "fs-extra": "^8.0.0",
     "rocketact-dev-utils": "^1.1.3",
-    "validate-npm-package-name": "^3.0.0"
+    "validate-npm-package-name": "^3.0.0",
+    "latest-version": "^5.1.0",
+    "download": "^8.0.0",
+    "decompress": "^4.2.1"
   },
   "engines": {
     "node": ">=10"
