--- a/packages/rocketact/package.json
+++ b/packages/rocketact/package.json
@@ -43,9 +43,9 @@
     "fs-extra": "^8.0.0",
     "rocketact-dev-utils": "^1.1.3",
     "validate-npm-package-name": "^3.0.0",
-    "latest-version": "^5.1.0",
     "download": "^8.0.0",
-    "decompress": "^4.2.1"
+    "decompress": "^4.2.1",
+    "execa": "^5.0.0"
   },
   "engines": {
     "node": ">=10"
